Ignores ARIA relations (e.g. aria-labelledby) that point to an invisible target.

BUG=625356
R=dmazzoni@chromium.org, aboxhall@chromium.org
TESTED=layout tests, manually with Jaws

Review-Url: https://codereview.chromium.org/2112243004
Cr-Commit-Position: refs/heads/master@{#404696}

Former-commit-id: e0989c034eec8d6fcbb55f03a004fec2a32e83d7